--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ bin/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.bak
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
